<resources>
    <!-- App wide -->
    <string name="app_name" translatable="false">Mind Editor</string>
    <string name="mind_acronym">Moda Is Never Dead</string>

    <string name="go_back_btn_content_desc">Go back</string>

    <!-- Home page (MainActivity) -->
    <string name="home_add_note_btn">Add new note</string>
    <string name="home_expand_add_btn">Show add note buttons</string>

    <string name="home_drawer_open_desc">Open drawer</string>
    <string name="home_drawer_close_desc">Close drawer</string>

    <!-- Home drawer menu -->
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_header_content_desc">Mind Editor icon</string>
    <string name="home_menu_app_info">App info</string>
    <string name="home_menu_view_src_code">View source code</string>

    <!-- Custom note tiles -->
    <string name="cnt_default_header">Note header</string>
    <string name="cnt_default_body">This is a default note body</string>

    <!-- Note options dialog -->
    <string name="note_options_header">Note header</string>
    <string name="note_options_body">Note body</string>
    <string name="note_options_btn_pos">Edit</string>
    <string name="note_options_btn_neg">Delete</string>
    <string name="note_options_btn_neu">Cancel</string>

    <!-- Note deletion confirmation dialog -->
    <string name="note_del_confirm_pos_btn">Cancel</string>
    <string name="note_del_confirm_neg_btn">Delete</string>
    <string name="note_del_confirm_text">will be deleted, proceed?</string>
    <string name="note_deleted_toast">deleted</string>


    <!-- Note Editor Activity -->
    <string name="editor_default_note_header">Note header</string>
    <string name="editor_body_hint">Start typing</string>
    <string name="editor_heading_hint">Note title here</string>

    <string name="editor_blank_heading">Note title blank, changes not saved</string>

    <!-- Note info -->
    <string name="editor_note_info_separator">|</string>
    <string name="editor_note_info_character_num">characters</string>
    <string name="editor_note_info_character">character</string>
    <string name="editor_note_info_creation_time">00:00</string>


    <!-- Settings activity -->
    <string name="settings_toolbar_title">Settings</string>


    <!-- Preferences -->
    <string name="pref_choose_theme">App theme</string>
    <string name="pref_note_timestamp_format">Note timestamp format</string>
    <string name="pref_enable_blank_heading_toast">Enable blank heading notification</string>
    <string name="pref_enable_black_theme">Enable black theme</string>

    <!-- Preference categories -->
    <string name="pref_category_ui_settings">UI settings</string>
    <string name="pref_category_notes">Notes settings</string>

    <!-- Preference summaries -->
    <string name="pref_sum_choose_theme">Choose between light and dark mode or follow system theme</string>
    <string name="pref_sum_note_timestamp_format">Pick how the note timestamp appears in the bottom of the note editing page</string>
    <string name="pref_sum_enable_blank_heading_toast">Enable the unsaved changes pop up when you leave a note\'s title blank</string>
    <string name="pref_sum_enable_black_theme">Switch from dark grey to complete black backgrounds in dark mode (OLED/AMOLED displays)</string>

</resources>
