<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_category_ui_settings">

        <ListPreference
            android:defaultValue="3"
            app:entries="@array/prefs_note_choose_theme_keys"
            app:entryValues="@array/prefs_note_choose_theme_values"
            app:key="prefs_choose_theme"
            app:title="@string/pref_choose_theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_category_notes">

        <ListPreference
            app:key="prefs_note_timestamp_format"
            app:summary="@string/pref_sum_note_timestamp_format"
            app:entries="@array/prefs_note_timestamp_format_keys"
            app:entryValues="@array/prefs_note_timestamp_format_values"
            app:title="@string/pref_note_timestamp_format" />

        <SwitchPreferenceCompat
            app:key="prefs_blank_header_toast_disable"
            app:summary="@string/pref_sum_disable_blank_heading_toast"
            app:title="@string/pref_disable_blank_heading_toast" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>