<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/home_drawer_nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:headerLayout="@layout/home_drawer_header"
            app:menu="@menu/main_menu"
            android:layout_gravity="start" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_const_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/home_toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/home_notes_gridview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:title="@string/app_name"
                app:titleCentered="true" />

        <GridView
                android:id="@+id/home_notes_gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:horizontalSpacing="15dp"
                android:verticalSpacing="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/home_toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/home_expand_add_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/home_expand_add_btn"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/expand_add_note_fab"
                app:shapeAppearanceOverlay="@style/fab_rounded"
                android:backgroundTint="@color/colourPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/home_add_note_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/home_add_note_btn"
                android:backgroundTint="@color/colourPrimary"
                android:focusable="false"
                android:clickable="false"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@id/home_expand_add_fab"
                app:layout_constraintEnd_toEndOf="@id/home_expand_add_fab"
                app:layout_constraintStart_toStartOf="@id/home_expand_add_fab"
                app:srcCompat="@drawable/add_note_fab"
                app:shapeAppearanceOverlay="@style/fab_rounded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>